# masq

./: .env.example  .gitignore  CLAUDE.md  README.md  bot.py  download_models.py  masq_cli.py  pyproject.toml  requirements.txt
cogs/: __init__.py
cogs/masq/: __init__.py  cog.py  core.py  realesrgan.py
masq/: __init__.py
service/: .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  config.py  deploy-gpu.yaml  deploy.yaml  main.py  requirements-gpu.txt  requirements.txt
service/config/: models.yaml
service/docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md
service/routers/: __init__.py  background.py  upscale.py
service/services/: __init__.py  shotgun.py  upscaler.py
service/services/providers/: __init__.py  base.py  kie_provider.py  local_provider.py  runware_provider.py
